--- a/client/src/components/App/style.css
+++ b/client/src/components/App/style.css
@@ -3,7 +3,6 @@
 }
 
 .LogoSearch {
-  height: 80px;
   width: 100% !important;
   margin: 0;
   padding: 0;
@@ -99,7 +98,7 @@
     display:show;
     opacity: 1;
     position: relative;
-    margin-top: 100px;
+    margin-top: 70px !important;
     width: 100%;
     margin: auto;
     transition: top 2s linear;
@@ -121,5 +120,14 @@
     border-bottom: 1px solid #ddd;
     height: 850px;
     overflow:scroll;
+}
+
+.search-bar-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    margin:auto;
+    background: white !important;
+    z-index: 2;
 }
 
