--- a/client/src/components/App/style.css
+++ b/client/src/components/App/style.css
@@ -6,6 +6,8 @@
   width: 100% !important;
   margin: 0;
   padding: 0;
+  top: 0px;
+  position: fixed;
 }
 
 .App-header {
@@ -24,7 +26,12 @@
 }
 
 .footer {
-    padding: 5px;
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    bottom: 0px;
+    width: 100%;
+    border-top: 1px #333 solid;
 }
 
 .search-bar{
@@ -83,7 +90,7 @@
 }
 
 .main-active {
-    margin-top: -30px;
+    margin-top: 0px;
     transition: margin 0.3s ease-in;
 }
 
@@ -98,7 +105,7 @@
     display:show;
     opacity: 1;
     position: relative;
-    margin-top: 70px !important;
+    margin-top: 100px !important;
     width: 100%;
     margin: auto;
     transition: top 2s linear;
