--- a/client/src/components/App/style.css
+++ b/client/src/components/App/style.css
@@ -6,8 +6,6 @@
   width: 100% !important;
   margin: 0;
   padding: 0;
-  top: 0px;
-  position: fixed;
 }
 
 .App-header {
@@ -26,18 +24,18 @@
 }
 
 .footer {
+    display:none;
     position: fixed;
     margin: 0;
     padding: 0;
     bottom: 0px;
     width: 100%;
     border-top: 1px #333 solid;
+    background: white;
 }
 
 .search-bar{
     width: 350px;
-    margin-top: 8px;
-    margin-bottom: 12px;
     border-left: 1px solid transparent;
     border-right: 1px solid transparent;
     border-top: 1px solid #333;
@@ -45,11 +43,9 @@
     padding: 10px 15px;
     transition: width 0.2s linear;
     text-align: center;
-    text-decoration: none;
     color:black;
     appearance:none;
     outline: none;
-
 }
 
 .limit {
@@ -59,17 +55,11 @@
 }
 
 .title {
-    visibility: visible;
     font-size: 20px;
-    margin-bottom: 30px;
-    opacity: 1;
-    transition: all 0.1s lienar;
 }
 
 .title-hidden {
-    transition: all 0.1s linear;
-    visibility: hidden;
-    opacity: 0;
+    display: none;
 }
 
 .search-bar:focus {
@@ -84,8 +74,8 @@
     width: 100px;
 }
 
-.main-not-active {
-    margin-top: 200px;
+.main {
+    margin-top: 300px;
     transition: margin 0.1s linear;
 }
 
@@ -105,18 +95,12 @@
     display:show;
     opacity: 1;
     position: relative;
-    margin-top: 100px !important;
+    margin-top: -10px !important;
     width: 100%;
     margin: auto;
     transition: top 2s linear;
 }
 
-
-.contacted {
-    width:10px;
-    height:10px;
-    background: green;
-}
 
 .background {
     border-bottom: 1px solid #ddd;
@@ -129,16 +113,32 @@
     overflow:scroll;
 }
 
-.search-bar-wrapper {
-    position: fixed;
+.searchbar-wrapper {
+    top: 400px;
     width: 100%;
     height: 50px;
     margin:auto;
     background: white !important;
     z-index: 2;
+    position: fixed;
+    transition: all 0.3s ease-in;
+}
+
+.fixed {
+    top:0;
+    position:fixed;
 }
 
 .transparent {
     opacity: 0.5;
     transition: opacity 0.1s linear;
+}
+
+.smallLogo {
+    padding: 5px;
+    margin-left: 15px;
+}
+
+.hide {
+    display:none;
 }
