--- a/client/src/components/App/style.css
+++ b/client/src/components/App/style.css
@@ -35,7 +35,7 @@
 }
 
 .search-bar{
-    width: 350px;
+    width: 60%;
     border-left: 1px solid transparent;
     border-right: 1px solid transparent;
     border-top: 1px solid #333;
@@ -63,7 +63,7 @@
 }
 
 .search-bar:focus {
-    width: 400px;
+    width: 70%;
     border-top: 1px solid #db0a5b;
     border-bottom: 1px solid #db0a5b;
     outline: none;
@@ -75,7 +75,7 @@
 }
 
 .main {
-    margin-top: 300px;
+    margin-top: 250px;
     transition: margin 0.1s linear;
 }
 
@@ -114,7 +114,7 @@
 }
 
 .searchbar-wrapper {
-    top: 400px;
+    top: 350px;
     width: 100%;
     height: 50px;
     margin:auto;
@@ -142,3 +142,46 @@
 .hide {
     display:none;
 }
+
+.spinner {
+  margin: 30px auto;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #db0a5b;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
